--- a/house-landing-page/package.json
+++ b/house-landing-page/package.json
@@ -8,7 +8,7 @@
     "dev": "gulp",
     "build": "gulp build --build",
     "zip": "gulp deployZIP --build",
-    "svgSprite": "gulp svgSprite"
+    "svgSprite": "gulp sprite"
   },
   "author": "Julie",
   "license": "ISC",
